# adsdatahub-py

./: .gitignore  README.md  adsdatahub.code-workspace  pyproject.toml
.github/workflows/: pypi-publish.yml  test-suite.yml
adsdatahub/: README.md  pyproject.toml
adsdatahub-cli/: pyproject.toml
adsdatahub/src/adsdatahub/: __init__.py
adsdatahub/src/adsdatahub/restapi/: real_client.py
src/adsdatahub/client/: real_client.py
