[project]
name = "adsdatahub"
version = "0.0.3"
description = "Ads Data Hub API client for Python"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "ya7010", email = "ya7010@outlook.com" }]
dependencies = [
  "google-api-python-client>=2.114.0,<3.0.0",
  "google-cloud-bigquery>=3.17.2,<4.0.0",
  "httpx>=0.26,<1",
  "pydantic>=2.6.1,<3.0.0",
  "typing-extensions>=4.9.0",
]

[dependency-groups]
dev = [
  "db-dtypes>=1.2.0,<2.0.0",
  "google-api-python-client-stubs>=1.23.0,<2.0.0",
  "ipython>=8.20.0,<9.0.0",
  "pandas>=2.2.1,<3.0.0",
  "pyright>=1.1.348",
  "pytest>=8.0.2,<9.0.0",
  "pytest-asyncio>=0.23.5,<1.0.0",
  "pytest-cov>=4.1.0,<5.0.0",
  "pytest-xdist>=3.5.0,<4.0.0",
  "ruff>=0.3,<0.7",
  "taskipy>=1.12.2,<2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = "--strict-markers"
markers = [
  "long: marks tests as long (deselect with '-m \"not long\"')",
  "mock: marks tests as mock (select with '-m \"mock\"')",
]

[tool.taskipy.tasks]
ci = "task format && task lint && task typecheck && task test"
format = "ruff format ."
lint = "ruff check ."
test = "pytest -n auto --cov=src --cov-report=term --cov-report=xml tests"
typecheck = "pyright src/** tests/** examples/**"
