[project]
name = "adsdatahub-cli"
version = "0.0.4"
description = ""
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "ya7010", email = "ya7010@outlook.com" }]
dependencies = [
  "adsdatahub>=0.0.4,<0.0.5",
  "pandas>=2.2.1,<3.0.0",
  "rich>=13.7.1,<14.0.0",
  "rich-argparse>=1.4.0,<2.0.0",
]

[dependency-groups]
dev = [
  "pandas-stubs>=2.2.1.240316,<3.0.0",
  "pyright>=1.1.356,<2.0.0",
  "pytest>=8.1.1,<9.0.0",
  "ruff>=0.3.4,<0.4.0",
  "taskipy>=1.12.2,<2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.taskipy.tasks]
ci = "task format && task lint && task typecheck && task test"
format = "ruff format ."
lint = "ruff check ."
test = "pytest"
typecheck = "pyright src/** tests/**"
